--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
 		<repository>
 			<id>nexus</id>
 			<name>local nexus</name>
-			<url>http://192.168.1.101:8091/nexus/content/groups/public</url>
+			<!-- <url>http://localhost:8081/nexus/content/groups/public</url> -->
+			<url>http://192.168.1.101:8091/nexus/content/groups/public</url> 
 		</repository>
 		<repository>
 			<id>repo1 central</id>
@@ -26,11 +27,22 @@
 		<jettyVersion>7.3.0.v20110203</jettyVersion>
 	</properties>
 	<dependencies>
-	
+		<!-- internal project -->
 		<dependency>
-   		<groupId>org.mongodb</groupId>
-   			<artifactId>mongo-java-driver</artifactId>
-   			<version>2.6</version>
+			<groupId>com.orange</groupId>
+			<artifactId>Common_Java</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.orange</groupId>
+			<artifactId>Common_Java_GroupBuy</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<!-- 3rd party -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>me.prettyprint</groupId>
