--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		</org.springframework.version>
 		<org.apache.mahout.version>0.4</org.apache.mahout.version>
 		<jettyVersion>7.3.0.v20110203</jettyVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>		
 	</properties>
 	<dependencies>
 		<!-- internal project -->
@@ -200,6 +201,36 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<plugins>
+	
+<plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <configuration>
+        <appendAssemblyId>false</appendAssemblyId>
+        <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+        <archive>
+            <manifest>
+                <mainClass>com.orange.groupbuy.api.GroupBuyApiServer</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+    <executions>
+        <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+                <goal>assembly</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+
+</plugins>
+	
+	
+
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
 		<outputDirectory>target/classes</outputDirectory>
@@ -220,4 +251,7 @@
 			</testResource>
 		</testResources>
 	</build>
+	
+		
 </project>
+
