all in one server support

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
 	<repositories>
-		<repository>
+			<!-- <url>http://localhost:8081/nexus/content/groups/public</url> -->
+ <!-- 		<repository>
 			<id>nexus</id>
 			<name>local nexus</name>
-			<!-- <url>http://localhost:8081/nexus/content/groups/public</url> -->
 			<url>http://192.168.1.101:8091/nexus/content/groups/public</url>
-		</repository>
+		</repository> -->
 		<repository>
 			<id>repo1 central</id>
 			<name>Maven Central Repo1</name>
@@ -103,6 +103,11 @@
 			<artifactId>jetty-server</artifactId>
 			<version>${jettyVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>${jettyVersion}</version>
+		</dependency>	
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
