--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,13 @@
 <project>
 	<repositories>
 			<!-- <url>http://localhost:8081/nexus/content/groups/public</url> -->
- <!-- 		<repository>
+			<!-- 
+  		<repository>
 			<id>nexus</id>
 			<name>local nexus</name>
-			<url>http://192.168.1.101:8091/nexus/content/groups/public</url>
-		</repository> -->
+			<url>http://localhost:8091/nexus/content/groups/public</url>
+		</repository>
+		 -->
 		<repository>
 			<id>repo1 central</id>
 			<name>Maven Central Repo1</name>
@@ -243,7 +245,7 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>./lib/</classpathPrefix>
 							<mainClass>
-								com.orange.groupbuy.api.GroupBuyApiServer
+								com.orange.groupbuy.api.GroupBuyAllInOneServer
 							</mainClass>
 						</manifest>
 					</archive>
